# raycast

./: CMakeLists.txt  main.c  shell.nix
src/: main.c
src/raycasting/: raycast.c  raycast.h
src/render/: render.c  render.h  window.c  window.h
src/shader/: blur.frag  jfa.frag  jfa_dist.frag  shader.frag  shader.vert  shadeshader.frag  simple.frag  simple_raymarch.frag  smart_raymarch.frag
